Completed clicking and then changing the divs colors

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container"></div>
     <input type="color" class="buttons itemcenter" id="color-picker" value="#2f2f2f">
     <div class="buttons-container">
-      <button class="buttons">Color Mode</button>
+      <button class="buttons" aria-selected="true">Color Mode</button>
       <button class="buttons">Rainbow Mode</button>
       <button class="buttons">Eraser</button>
       <button class="buttons">Clear</button>
