Added the rainbow mode functionality. Corrected the Color Mode which was conflicting with Eraser Mode

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <input type="color" class="buttons itemcenter" id="color-picker" value="#2f2f2f">
     <div class="buttons-container">
-      <button class="buttons color-mode">Color Mode</button>
+      <button class="buttons active color-mode">Color Mode</button>
       <button class="buttons rainbow-mode">Rainbow Mode</button>
       <button class="buttons eraser">Eraser</button>
       <button class="buttons clear">Clear</button>
